# hpc_scripts

./: .gitignore  README.md  cmr_bashrc_extras.bash  cmr_bashrc_extras_aqua.bash  cmr_bashrc_extras_lyra.bash  example.smk  windows_microbiome_ssh_config
.github/workflows/: test.yml
dorado_workflow/: README.md  Snakefile  config.yaml  pixi.toml
dorado_workflow/envs/: samtools.yml
hpc_scripts/: filename_tree_splitter.py
qstat_filter/: Cargo.toml
qstat_filter/src/: main.rs
snakemake_configs/aqua/: config.v8+.yaml  config.yaml
snakemake_configs/aqua-immediate-submit/: config.v8+.yaml  config.yaml
snakemake_configs/aqua-no-immediate-submit/: config.yaml
snakemake_configs/local/: config.yaml
snakemake_configs/mqsub/: config.v8+.yaml  config.yaml
snakemake_configs/mqsub-lyra/: config.v8+.yaml  config.yaml
snakemake_qsub/: Snakefile
tests/: __init__.py  test_cmr_lint.py  test_conda_check.py  test_mqstat.py  test_mqtop.py  test_pixi_cmr_init.py  test_qstat_filter.py
tests/data/: qstat.json  qstat_empty.json  qstat_f.txt  qstat_xf_finished.txt  qstatx_duplicate.json  qstatx_finished.json  qstatx_running.json
